--- a/styles/home.css
+++ b/styles/home.css
@@ -6,11 +6,38 @@
 	box-shadow: 0 0 10px  grey;
 	
 }
+#smallcards p{
+	font-size: 24px;
+	font-style: italic;
+	
+}
+#smallcards label{
+	color: white;
+	font-size: 26px;
+	font-style: bold;
+	
+}
+#smallcards li{
+	font-size: 24px;
+	font-style: bold;
+	
+}
 #largecards{
 	padding: 10px;
 	width: 65%;
 	margin-left: 17%;
 	box-shadow: 0 0 10px  grey;
+}
+#largecards p{
+	font-size: 24px;
+	font-style: initial;
+	
+}
+#largecards label{
+	color: white;
+	font-size: 26px;
+	font-style: bold;
+	
 }
 /* myplace */
 
