--- a/styles/index2.css
+++ b/styles/index2.css
@@ -1,3 +1,6 @@
+body{
+	background: #3b3b3b ;
+}
 #content2{
   	margin-top:130px;
   	padding:15px 15px;
@@ -7,7 +10,7 @@
 	padding: 10px;
 	width: 60%;
 	margin-left: 5%;
-	box-shadow: 0 0 10px  grey;
+	box-shadow: 0 0 10px  white;
 	border-radius: 20px;
 	
 }
@@ -27,7 +30,7 @@
 	padding: 10px;
 	width: 25%;
 	margin-left: 5%;
-	box-shadow: 0 0 10px  grey;
+	box-shadow: 0 0 10px  white;
 	border-radius: 20px;
 }
 #largecards p{
@@ -36,7 +39,7 @@
 	
 }
 #largecards label{
-	color:  #3d3d3d;
+	color:  #f1f1f1;
 	font-size: 22px;
 	font-style: italic;
 	
@@ -198,13 +201,13 @@
 	padding: 10px;
 	width: 98%;
 	margin-left: 0%;
-	box-shadow: 0 0 10px  grey;
+	box-shadow: 0 0 10px  white;
 }
 #largecards{
 	padding: 10px;
 	width: 98%;
 	margin-left: 0%;
-	box-shadow: 0 0 10px  grey;
+	box-shadow: 0 0 10px  white;
 }
 .btnmenu{
 	cursor: pointer;
