--- a/styles/index2.css
+++ b/styles/index2.css
@@ -1,10 +1,79 @@
 body{
 	background: #3b3b3b ;
 }
+.scrolldown{
+	position: absolute;
+	bottom: 30px;
+	left: 50%;
+	height: 40px;
+	width: 40px;
+	background: #00000000;
+	transform: translateY(-80px) translateX(-50%) rotate(45deg);
+}
+.scrolldown span{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-bottom: 2px solid #fff;
+	border-right: 2px solid #fff;
+	animation: animate 1.5s linear infinite;
+	opacity: 0;
+}
+.scrolldown span:nth-child(1){
+	transform: translate(-15px , -15px);
+	animation-delay: -0.4s;
+}
+.scrolldown span:nth-child(2){
+	transform: translate(0 , 0);
+	animation-delay: -0.2s;
+}
+.scrolldown span:nth-child(3){
+	transform: translate(15px , 15px);
+	animation-delay: 0s;
+}
+@keyframes animate {
+	0%{
+		top: -5px;
+		left: -5px;
+		opacity: 0;
+	}
+	25%{
+		top: 0px;
+		left: 0px;
+		opacity: 1;
+	}
+	50%,100%{
+		top: 5px;
+		left: 5px;
+		opacity: 0;
+	}
+}
+
 #content2{
-  	margin-top:130px;
   	padding:15px 15px;
   	display: flex;
+  }
+  #content1{
+  	-webkit-background-size: cover;
+	background-size: cover;
+  	background-repeat: no-repeat;
+  	background-position: center center;
+  	background-position: 100% 50;
+  	margin-top:140px;
+  	padding:15px 15px;
+  	height: 80vh;
+  }
+#content1 p{
+	font-size: 18px;
+	font-weight: bold;
+	width: 50%;
+	color: white;
+  }
+  #content1 h2{
+	font-weight: bold;
+	color: #062a78;
   }
 #smallcards{
 	padding: 10px;
@@ -193,9 +262,12 @@ body{
 
 @media (max-width: 800px){
 	#content2{
-  	margin-top:130px;
   	padding:15px 15px;
   	display: block;
+  }
+  	#content1{
+  	margin-top:140px;
+  	padding:15px 15px;
   }
 	#smallcards{
 	padding: 10px;
