--- a/styles/index2.css
+++ b/styles/index2.css
@@ -3,7 +3,7 @@ body{
 }
 .scrolldown{
 	position: absolute;
-	bottom: 30px;
+	bottom: 5px;
 	left: 50%;
 	height: 40px;
 	width: 40px;
@@ -57,7 +57,6 @@ body{
   }
   #content1{
   	-webkit-background-size: cover;
-	background-size: cover;
   	background-repeat: no-repeat;
   	background-position: center center;
   	background-position: 100% 50;
@@ -307,6 +306,12 @@ body{
 	margin-left: 5%;
 	background: white;
 }
+#content1 p{
+	font-size: 18px;
+	font-weight: bold;
+	width: 70%;
+	color: white;
+  }
 
 }
 a{
