--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,9 +1,11 @@
 
 #footer{
-	background: #f1F1F1;
+	background: #051818;
 	padding: 10px;
 	display: flex;
+  color: #f1f1f1;
 }
+
 
 /* new navbar*/
 #content{
@@ -21,33 +23,12 @@
   z-index: 99;
 }
 
-#navbar a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-  margin-left: 20px;
-}
 
 #navbar #logo {
   font-size: 35px;
   font-weight: bold;
   transition: 0.4s;
   margin-top: -10px;
-}
-
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-#navbar a.active {
-  background-color: dodgerblue;
-  color: white;
 }
 
 #navbar-right {
@@ -59,11 +40,7 @@
   #navbar {
     padding: 20px 10px !important;
   }
-  #navbar a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+
   #navbar-right {
     float: none;
   }
