--- a/styles/index2.css
+++ b/styles/index2.css
@@ -173,6 +173,9 @@ body{
 	padding: 2%;
 
 }
+.mydiscription p{
+ color: #f1f1f1;
+}
 .mycontent2{
 	width: 40%;
 	margin-left: 5%;
@@ -295,9 +298,8 @@ opacity: 0.9;
   border-radius: 25px;
 }
 .iconz {
-  padding: 5px;
-  background: #bebebe;
-  color: white;
+  
+  color: #dcdcdc;
   text-align: center;
   border-radius: 50%;
 }
