--- a/styles/index2.css
+++ b/styles/index2.css
@@ -306,6 +306,82 @@ opacity: 0.9;
 .icon:hover{
 	animation: rotate 1s linear;
 }
+
+/* small about me div */
+
+.holder{
+	position: relative;
+}
+.holder:before, .holder:after{
+	animation: orbit 6s linear infinite ;
+	border-radius: 50%;
+	box-shadow: 0 0 1rem 0 rgba(0,0,0,0.2);
+	content: '';
+	height: 150px;
+	position: absolute;
+	width: 150px;
+	left: 40%;
+}
+.holder:before{
+	background: #242124; 
+	background: -moz-radial-gradient(top right, #242124 ,  	#000014 );
+	background: radial-gradient(to bottom left, #242124,  	#000014 );
+	background: -webkit-radial-gradient(top right , #242124,  	#000014  );
+	z-index: -1;
+}
+.holder:after{
+	animation-delay: 2.5s;
+	background: #e0e793;
+	background: -moz-radial-gradient(bottom right, #242124 ,  	#000014 );
+	background: radial-gradient(to top left, #242124,  	#000014 );
+	background: -webkit-radial-gradient(bottom right , #242124,  	#000014  );
+	right: 50;
+	top: 0;
+	z-index: -1;
+}
+.card{
+	border: 1px solid #fff;
+	border-radius: 15px;
+	box-shadow: 0 0 1rem 0 rgba(0 ,0,0,0.2); 
+	font-size: 2rem;
+	overflow: hidden;
+	position: relative;
+	width: 70%;
+	margin-left: 15%;
+}
+.card:before{
+	background-color: rgb(255, 255,255, 0.3);
+	backdrop-filter:blur(10px) saturate(100%) contrast(45%)brightness(130%);
+	content: '';
+	height: 100%;
+	position: absolute;
+	width: 100%;
+}
+.card-text{
+	color: #000;
+	margin-top: 30px;
+	margin-left: 30px;
+	position: relative;
+	z-index: 2;
+
+}
+.card svg{
+	bottom: 3px;
+	position: absolute;
+	right: 30px;
+	
+}
+@keyframes orbit{
+	from{
+		transform: rotate(0deg) translateX(100px) rotate(0deg);
+
+	}
+	to{
+		transform: rotate(360deg) translateX(100px) rotate(-360deg);
+		
+	}
+}
+
 @keyframes rotate{
 	0%{
 		transform: rotate(0deg);
