small update on content display

--- a/styles/index2.css
+++ b/styles/index2.css
@@ -287,9 +287,9 @@ opacity: 0.9;
 	border-bottom-right-radius: 15px;
 }
 #gitratetrain{
-	background: #ffe234;
-	background-image: linear-gradient(to right, #fff , #ffe234);
-	width: 59%;
+	background:  #57e32c;
+	background-image: linear-gradient(to right, #fff ,  #57e32c);
+	width: 84%;
 	height: 100%;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
