--- a/styles/index2.css
+++ b/styles/index2.css
@@ -279,9 +279,9 @@ opacity: 0.9;
 	border-bottom-right-radius: 15px;
 }
 #javascriptratetrain{
-	background: #ffe234;
-	background-image: linear-gradient(to right, #fff , #ffe234);
-	width: 60%;
+	background: #b7dd29;
+	background-image: linear-gradient(to right, #fff , #b7dd29);
+	width: 80%;
 	height: 100%;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
