--- a/styles/index.css
+++ b/styles/index.css
@@ -1,34 +1,219 @@
-*{
-	padding: 0;
-	box-sizing: border-box;
-}
-.snapsection{
-	-ms-overflow-style: none; 
-    scrollbar-width: none;
-	height: 100vh;
-	align-items: center;
-	justify-content: center;
-	scroll-snap-align: center;
-	overflow: scroll;
-}
-.parent-element{
-	-ms-overflow-style: none; 
-    scrollbar-width: none;
-	scroll-snap-type: y mandatory;
-	overflow-y: scroll;
-	height: 100vh;
-	
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
-}
-.parent-element::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-}
-.snapsection::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-}
-.section-home{
-	position: relative;
+.glassbox{
+ 	position: relative;
+ 	box-shadow: 0 5px 15px rgba(0,0,0,5);
+ 	width: 70%;
+ 	height: 60%;
+ 	margin-left: 15%;
+ 	font-family: 'Permanent Marker', cursive;
+ }
+ .glassbox:before{
+ 	content: '';
+ 	position: absolute;
+ 	top: -20px;
+ 	bottom: -20px;
+ 	left: -20px;
+ 	right: -20px;
+ 	background-image: url(images/techbackground3.jpg);
+ 	filter: blur(4px);
+ }
+
+.scrolldown{
+	position: absolute;
+	bottom: 2px;
+	left: 50%;
+	height: 40px;
+	width: 40px;
 	background: #00000000;
+	transform: translateY(-80px) translateX(-50%) rotate(45deg);
+}
+.scrolldown span{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-bottom: 2px solid #fff;
+	border-right: 2px solid #fff;
+	animation: animate 1.5s linear infinite;
+	opacity: 0;
+}
+.scrolldown span:nth-child(1){
+	transform: translate(-15px , -15px);
+	animation-delay: -0.4s;
+}
+.scrolldown span:nth-child(2){
+	transform: translate(0 , 0);
+	animation-delay: -0.2s;
+}
+.scrolldown span:nth-child(3){
+	transform: translate(15px , 15px);
+	animation-delay: 0s;
+}
+@keyframes animate {
+	0%{
+		top: -5px;
+		left: -5px;
+		opacity: 0;
+	}
+	25%{
+		top: 0px;
+		left: 0px;
+		opacity: 1;
+	}
+	50%,100%{
+		top: 5px;
+		left: 5px;
+		opacity: 0;
+	}
+}
+
+#content2{
+  	padding:15px 15px;
+  	display: flex;
+
+  }
+
+  #content1{
+  	-webkit-background-size: cover;
+  	background-repeat: no-repeat;
+  	background-position: center center;
+  	background-position: 100% 50;
+  	padding:15px 15px;
+  	height: 90vh;
+  }
+#content1 p{
+	font-size: 18px;
+	font-weight: bold;
+	width: 100%;
+	color: white;
+  }
+  #content1 h3{
+	font-weight: bold;
+	color: #00bfff;
+  }
+
+  #largecards{
+	padding: 10px;
+	width: 25%;
+	margin-left: 5%;
+	box-shadow: 0 0 10px  white;
+	border-radius: 20px;
+}
+#largecards p{
+	font-size: 24px;
+	font-style: italic;
+	
+}
+#largecards label{
+	color:  #f1f1f1;
+	font-size: 22px;
+	font-style: italic;
+	
+}
+/* iocns */
+.icon {
+  padding: 10px;
+  color: white;
+  text-align: center;
+  border-radius: 25px;
+}
+.icons {
+  padding: 10px;
+  background: #bebebe;
+  color: white;
+  text-align: center;
+  border-radius: 25px;
+}
+.iconz {
+  
+  color: #dcdcdc;
+  text-align: center;
+  border-radius: 50%;
+}
+.icon:hover{
+	animation: rotate 1s linear;
+	color: dodgerblue;
+}
+
+@keyframes rotate {
+	from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+}
+
+.small-infor{
+ padding: 10px;
+ width: 65%;
+ margin-left: 2.5%;
+ box-shadow: 0 0 10px  white;
+ border-radius: 20px;
+}
+.projets-holder{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.myprojectinfor{
+	width: 60%;
+	margin-left: 20%;
+	color: white;
+	font-size: 1.5em;
+	font-family: Papyrus;
+}
+.myprojectinfor label{
+	font-weight: bold;
+}
+.projects{
+flex: 1 1 300px; /*  Stretching: */
+  flex: 0 1 300px; /*  No stretching: */
+  border-right:  2px solid  dodgerblue;
+  border-left:  2px solid  dodgerblue;
+  padding: 10px;
+ margin: 1.5%;
+ border-radius: 20px;
+overflow: hidden;
+font-family: 'Gloria Hallelujah', cursive;
+}
+.projects img{
+ opacity: 0.5;
+}
+.projects img:hover{
+ opacity: 0.9;
+}
+
+@media (max-width: 800px){
+
+	 .glassbox{
+	 	width: 95%;
+	 	margin-left: 2.5%
+	 }
+	#content2{
+  	padding:15px 15px;
+  	display: block;
+  }
+  	#content1{
+  	padding:15px 15px;
+  }
+	.small-infor{
+	padding: 10px;
+	width: 98%;
+	margin-left: 0%;
+	box-shadow: 0 0 10px  white;
+}
+#largecards{
+	padding: 10px;
+	width: 98%;
+	margin-left: 0%;
+	box-shadow: 0 0 10px  white;
 }
 
 
+}
+a{
+  color: #00bfff;
+}
+a:visited {
+  color: #f500f5;
+}
