--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap');
 
 body, html {
   height: 100%;
@@ -54,19 +53,19 @@ body, html {
   color: #282E34;
   background-color:#e7e7e7;
   text-align:center;
-  padding:30px 50px;
+  padding:16px 24px;
   text-align: justify;
   font-family: 'Trebuchet MS', sans-serif;
-  font-size: 24px;
+  font-size: 18px;
 }
 .ribbon-text{
   color:#282E34;
   background-color:#e7e7e7;
   text-align:center;
-  padding:50px 80px;
+  padding:16px 24px;
   text-align: justify;
-  font-family: 'Shadows Into Light Two', cursive;
-  font-size: 28px;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 16px;
   font-weight: bold;
 }
 
