--- a/styles/background.css
+++ b/styles/background.css
@@ -1,4 +1,3 @@
-
 body, html {
   height: 100%;
   margin: 0;
@@ -12,7 +11,7 @@ body, html {
   font-size: 28px;
 }
 
-.dashboard, .about, .skills, .projects, .education, .footer {
+.dashboard  {
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
@@ -47,28 +46,7 @@ body, html {
   letter-spacing: 2px;
   font-weight: bold;
 }
-
-
-.mybibbon{
-  color: #282E34;
-  background-color:#e7e7e7;
-  text-align:center;
-  padding:16px 24px;
-  text-align: justify;
-  font-family: 'Trebuchet MS', sans-serif;
-  font-size: 18px;
+.footer{
+  background: #1a1110;
 }
-.ribbon-text{
-  color:#282E34;
-  background-color:#e7e7e7;
-  text-align:center;
-  padding:16px 24px;
-  text-align: justify;
-  font-family: 'Trebuchet MS', sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-
-
 
