--- a/styles/scrolleffect.css
+++ b/styles/scrolleffect.css
@@ -13,7 +13,7 @@ header h2 {
 }
 
 .scroll-container {
-  
+  background-color: #eaeaea;
   padding: 2rem 1rem;
   display: flex;
   align-items: center;
@@ -22,16 +22,16 @@ header h2 {
 }
 
 .scroll-container:nth-of-type(1) {
-  background-color: #bdd0c4;
+   background-color: #eaeaea;
 }
 .scroll-container:nth-of-type(2) {
-  background-color: #f5d2d3;
+  background-color: #eaeaea;
 }
 .scroll-container:nth-of-type(3) {
-  background-color: #9ab7d3;
+  background-color: #eaeaea;
 }
 .scroll-container:nth-of-type(4) {
-  background-color: #dfccf1;
+  background-color: #eaeaea;
 }
 
 .scroll-container:nth-of-type(even) {
