--- a/scrolleffect.css
+++ b/scrolleffect.css
@@ -13,7 +13,7 @@ header h2 {
 }
 
 .scroll-container {
-  background-color: #eaeaea;
+  background-color: #f8f9fa;
   padding: 2rem 1rem;
   display: flex;
   align-items: center;
@@ -22,16 +22,16 @@ header h2 {
 }
 
 .scroll-container:nth-of-type(1) {
-   background-color: #eaeaea;
+   background-color: #f8f9fa;
 }
 .scroll-container:nth-of-type(2) {
-  background-color: #eaeaea;
+  background-color:#f8f9fa;
 }
 .scroll-container:nth-of-type(3) {
-  background-color: #eaeaea;
+  background-color: #f8f9fa;
 }
 .scroll-container:nth-of-type(4) {
-  background-color: #eaeaea;
+  background-color: #f8f9fa;
 }
 
 .scroll-container:nth-of-type(even) {
@@ -45,7 +45,7 @@ header h2 {
 .scroll-element {
   min-height: 300px;
   height: 100%;
-  background-color: #eaeaea;
+  background-color: #feffff;
 }
 
 .scroll-caption {
@@ -56,7 +56,7 @@ header h2 {
 footer {
   text-align: center;
   padding: 0.5rem 0;
-  background-color: #faddad;
+  background-color: #feffff;
 }
 
 footer p {
